WerklijstenPM/err
babel.min.js:24  You are using the in-browser Babel transformer. Be sure to precompile your scripts for production - https://babeljs.io/docs/setup/
u @ babel.min.js:24
babel.min.js:2  Uncaught SyntaxError: Inline Babel script: Unexpected token (141:68)
  139 |                             <button 
  140 |                                 className="upload-btn"
> 141 |                                 onClick={() => fileInputRef.current?.click()}
      |                                                                     ^
  142 |                             >
  143 |                                 <span className="btn-icon">📂</span>
  144 |                                 Excel Importeren
    at J.raise (babel.min.js:7:10099)
    at X.unexpected (babel.min.js:5:27476)
    at te.parseExprAtom (babel.min.js:6:30787)
    at t.parseExprAtom (babel.min.js:8:22540)
    at te.parseExprSubscripts (babel.min.js:6:25684)
    at te.parseMaybeUnary (babel.min.js:6:25267)
    at te.parseExprOps (babel.min.js:6:23839)
    at te.parseMaybeConditional (babel.min.js:6:23430)
    at te.parseMaybeAssign (babel.min.js:6:22650)
    at t.parseMaybeAssign (babel.min.js:8:12561)
